--- a/WebApplicationSWEN3/docker-compose.yml
+++ b/WebApplicationSWEN3/docker-compose.yml
@@ -1,17 +1,28 @@
 version: '3.8'
 services:
-  webapplication-swen3:
+  paperless-rest:
     image: mcr.microsoft.com/dotnet/sdk:8.0
-    container_name: webapplication-swen3
+    container_name: paperless-rest
     ports:
-      - "8081:80" # PaperlessRest
+      - "8081:8081"
     volumes:
-      - ./:/app # Mount das Projektverzeichnis in den Container
+      - ./:/app
     working_dir: /app
-    command: ["dotnet", "run", "--urls", "http://0.0.0.0:80"] # Starte die Anwendung
+    command: ["dotnet", "run", "--urls", "http://0.0.0.0:8081"]
     networks:
-      - swen_network
+      - paperless-network
+
+  paperless-webui:
+    image: nginx:alpine
+    container_name: paperless-webui
+    ports:
+      - "80:80"
+    volumes:
+      - ./wwwroot:/usr/share/nginx/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - paperless-network
 
 networks:
-  swen_network:
+  paperless-network:
     driver: bridge
