--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8081:8081"
     volumes:
-      - ./:/app
+      - ../WebApplicationSWEN3:/app
     working_dir: /app
     command: ["dotnet", "run", "--urls", "http://0.0.0.0:8081"]
     networks:
