--- a/DAL/appsettings.json
+++ b/DAL/appsettings.json
@@ -6,4 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=documentsearch;Username=mamo;Password=T1P3m!hvQ9;"
+  }
 }
