von localhost zu container

--- a/DAL/appsettings.json
+++ b/DAL/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=documentsearch;Username=mamo;Password=T1P3m!hvQ9;"
+    "DefaultConnection": "Host=paperless-postgres;Port=5432;Database=documentsearch;Username=mamo;Password=T1P3m!hvQ9"
   }
 }
