--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -11,8 +11,7 @@ services:
       - paperless-network
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-
-
+      - ConnectionStrings__DefaultConnection=Host=paperless-postgres;Port=5432;Database=documentsearch;Username=mamo;Password=T1P3m!hvQ9
 
   paperless-webui:
     image: nginx:alpine
@@ -25,7 +24,7 @@ services:
     networks:
       - paperless-network
 
-  postgres:
+  paperless-postgres:
     image: postgres:13
     container_name: paperless-postgres
     environment:
