--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -26,6 +26,9 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.8" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\SharedResources\SharedResources.csproj" />
+	</ItemGroup>
 
 
 </Project>
