--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -38,6 +38,19 @@ services:
     networks:
       - paperless-network
 
+
+  rabbitmq:
+    image: rabbitmq:3.9.29-management-alpine
+    ports:
+        - 5672:5672
+        - 15672:15672
+    environment:
+      RABBITMQ_DEFAULT_USER: user      
+      RABBITMQ_DEFAULT_PASS: password 
+    networks:
+      - paperless-network
+
+
 networks:
   paperless-network:
     driver: bridge
