--- a/WebApplicationSWEN3/WebApplicationSWEN3.csproj
+++ b/WebApplicationSWEN3/WebApplicationSWEN3.csproj
@@ -19,11 +19,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\RabbitMq\RabbitMq.csproj" />
     <ProjectReference Include="..\SharedResources\SharedResources.csproj" />
   </ItemGroup>
 
