--- a/WebApplicationSWEN3/appsettings.json
+++ b/WebApplicationSWEN3/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=documentsearch;Username=mamo;Password=T1P3m!hvQ9;"
+  },
+  "QueueOptions": {
+    "ConnectionString": "amqp://user:password@rabbitmq:5672",
+    "ExchangeName": "exchange",
+    "QueueName": "tesseract"
   }
 }
