--- a/WebApplicationSWEN3/WebApplicationSWEN3.csproj
+++ b/WebApplicationSWEN3/WebApplicationSWEN3.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BL\BL.csproj" />
     <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\RabbitMq\RabbitMq.csproj" />
     <ProjectReference Include="..\SharedResources\SharedResources.csproj" />
