--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -50,6 +50,60 @@ services:
     networks:
       - paperless-network
 
+  tesseract-ocr:
+    build:
+      context: ../
+      dockerfile: ./Docker/Dockerfile  
+    container_name: tesseract-ocr
+    depends_on:
+      - rabbitmq
+    environment:
+      - OCR_QUEUE=ocr_jobs
+      - RESULT_QUEUE=ocr_results
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_USER=user
+      - RABBITMQ_PASSWORD=password
+      - TESSDATA_PREFIX=/app/tessdata
+    volumes:
+      - ./tessdata:/app/tessdata
+    networks:
+      - paperless-network
+
+  file-storage-service:
+    build:
+      context: ../
+      dockerfile: ./Docker/Dockerfile  
+    container_name: file-storage-service
+    ports:
+      - "8082:8082"
+    environment:
+      - ASPNETCORE_URLS=http://0.0.0.0:8082
+      - ASPNETCORE_ENVIRONMENT=Development
+      - MINIO_ENDPOINT=http://minio:9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
+      - MINIO_BUCKET=documents
+    networks:
+      - paperless-network
+    depends_on:
+      - minio
+
+  minio:
+    image: minio/minio
+    container_name: minio
+    command: server /data --console-address ":9090"
+    ports:
+      - "9000:9000"
+      - "9090:9090"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - minio-data:/data
+    networks:
+      - paperless-network
+
+
 
 networks:
   paperless-network:
@@ -57,4 +111,6 @@ networks:
 
 volumes:
   postgres-data:
+    driver: local
+  minio-data:
     driver: local
