--- a/TesseractOcr/appsettings.json
+++ b/TesseractOcr/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "QueueOptions": {
+    "ConnectionString": "amqp://user:password@rabbitmq:5672",
+    "ExchangeName": "exchange",
+    "QueueName": "tesseract"
+  }
 }
