Added Queue Result

--- a/TesseractOcr/appsettings.json
+++ b/TesseractOcr/appsettings.json
@@ -6,9 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "QueueOptions": {
+  "QueueOptionsOcr": {
     "ConnectionString": "amqp://user:password@rabbitmq:5672",
     "ExchangeName": "exchange",
     "QueueName": "tesseract"
+  },
+  "QueueOptionsResult": {
+    "ConnectionString": "amqp://user:password@rabbitmq:5672",
+    "ExchangeName": "exchange",
+    "QueueName": "tesseractResult"
   }
 }
