--- a/WebApplicationSWEN3/appsettings.json
+++ b/WebApplicationSWEN3/appsettings.json
@@ -9,9 +9,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=documentsearch;Username=mamo;Password=T1P3m!hvQ9;"
   },
-  "QueueOptions": {
+  "QueueOptionsOcr": {
     "ConnectionString": "amqp://user:password@rabbitmq:5672",
     "ExchangeName": "exchange",
     "QueueName": "tesseract"
+  },
+  "QueueOptionsResult": {
+    "ConnectionString": "amqp://user:password@rabbitmq:5672",
+    "ExchangeName": "exchange",
+    "QueueName": "tesseractResult"
   }
 }
