--- a/WebApplicationSWEN3/appsettings.json
+++ b/WebApplicationSWEN3/appsettings.json
@@ -18,5 +18,11 @@
     "ConnectionString": "amqp://user:password@rabbitmq:5672",
     "ExchangeName": "exchange",
     "QueueName": "tesseractResult"
+  },
+  "FileStorage": {
+    "Endpoint": "http://minio:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
+    "BucketName": "your-bucket-name"
   }
 }
