--- a/TesseractOcr/TesseractOcr.csproj
+++ b/TesseractOcr/TesseractOcr.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FileStorageService\FileStorageService.csproj" />
     <ProjectReference Include="..\RabbitMq\RabbitMq.csproj" />
   </ItemGroup>
 
