--- a/TesseractOcr/appsettings.json
+++ b/TesseractOcr/appsettings.json
@@ -15,5 +15,11 @@
     "ConnectionString": "amqp://user:password@rabbitmq:5672",
     "ExchangeName": "exchange",
     "QueueName": "tesseractResult"
+  },
+  "FileStorage": {
+    "Endpoint": "http://minio:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
+    "BucketName": "documents"
   }
 }
