--- a/WebApplicationSWEN3/appsettings.json
+++ b/WebApplicationSWEN3/appsettings.json
@@ -23,6 +23,6 @@
     "Endpoint": "http://minio:9000",
     "AccessKey": "minioadmin",
     "SecretKey": "minioadmin",
-    "BucketName": "your-bucket-name"
+    "BucketName": "documents"
   }
 }
