--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -88,6 +88,31 @@ services:
       - paperless-network
 
 
+  elastic_search:
+    image: elasticsearch:8.7.1
+    environment:
+      - discovery.type=single-node
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "xpack.security.enabled=false"
+      - "xpack.security.enrollment.enabled=false"
+    ports:
+      - 9200:9200
+      - 9300:9300
+    networks:
+      - paperless-network 
+
+  kibanba:
+    image: docker.elastic.co/kibana/kibana:8.2.3
+    ports:
+      - 5601:5601
+    networks:
+      - paperless-network 
+
+
+
+
 
 networks:
   paperless-network:
