--- a/TesseractOcr/TesseractOcr.csproj
+++ b/TesseractOcr/TesseractOcr.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ElasticSearch\ElasticSearch.csproj" />
     <ProjectReference Include="..\FileStorageService\FileStorageService.csproj" />
     <ProjectReference Include="..\RabbitMq\RabbitMq.csproj" />
+    <ProjectReference Include="..\SharedResources\SharedResources.csproj" />
   </ItemGroup>
 
   <ItemGroup>
