--- a/WebApplicationSWEN3/WebApplicationSWEN3.csproj
+++ b/WebApplicationSWEN3/WebApplicationSWEN3.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BL\BL.csproj" />
     <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\ElasticSearch\ElasticSearch.csproj" />
     <ProjectReference Include="..\FileStorageService\FileStorageService.csproj" />
     <ProjectReference Include="..\RabbitMq\RabbitMq.csproj" />
     <ProjectReference Include="..\SharedResources\SharedResources.csproj" />
