--- a/DocumentTests/DocumentTests.csproj
+++ b/DocumentTests/DocumentTests.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="WireMock.Net" Version="1.6.9" />
   </ItemGroup>
 
   <ItemGroup>
