--- a/paperlessWebUI/nginx/default.conf
+++ b/paperlessWebUI/nginx/default.conf
@@ -10,4 +10,8 @@ server {
     location /api/ {
         proxy_pass http://paperless-rest:8081/;
     }
+
+    location /swagger/ {
+        proxy_pass         http://paperless-rest:8081/swagger/;
+    }
 }
